--- a/visualization.html
+++ b/visualization.html
@@ -139,27 +139,27 @@
 
         .content {
             flex: 1;
-            padding: 20px;
+            padding: 30px;
             margin-left: 220px;
             overflow-y: auto;
         }
 
         .filter-container {
             display: flex;
-            gap: 15px;
-            margin-bottom: 25px;
+            gap: 20px;
+            margin-bottom: 30px;
             justify-content: center;
         }
 
         #leagueFilter, #searchFilter {
             flex: 1;
-            max-width: 300px;
-            padding: 12px;
+            max-width: 350px;
+            padding: 14px;
             background: var(--card-bg);
             border: 1px solid var(--border-color);
             border-radius: 8px;
             color: var(--text-primary);
-            font-size: 0.9rem;
+            font-size: 1rem;
             transition: all 0.3s ease;
         }
 
@@ -169,19 +169,19 @@
         }
 
         .league-section {
-            margin-bottom: 50px;
+            margin-bottom: 60px;
         }
 
         .league-header {
-            font-size: 1.4rem;
+            font-size: 1.5rem;
             font-weight: 600;
-            margin-bottom: 15px;
-            padding: 8px;
+            margin-bottom: 20px;
+            padding: 10px;
             color: var(--text-primary);
             background: rgba(255, 255, 255, 0.05);
             border-radius: 8px;
-            height: 48px;
-            line-height: 32px;
+            height: 50px;
+            line-height: 30px;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
@@ -190,16 +190,16 @@
         .best-player-card {
             background: var(--card-bg);
             border-radius: 8px;
-            padding: 15px;
-            margin-bottom: 15px;
+            padding: 20px;
+            margin-bottom: 20px;
             border: 2px solid var(--accent-color);
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         .best-player-card h3 {
-            font-size: 1rem;
+            font-size: 1.1rem;
             font-weight: 600;
-            margin-bottom: 5px;
+            margin-bottom: 8px;
             color: var(--accent-color);
             display: flex;
             align-items: center;
@@ -207,21 +207,21 @@
         }
 
         .best-player-card p {
-            font-size: 0.9rem;
+            font-size: 0.95rem;
             color: var(--text-secondary);
-            margin: 2px 0;
+            margin: 4px 0;
         }
 
         .games-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-            gap: 15px;
+            grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+            gap: 20px;
         }
 
         .card {
             background: var(--card-bg);
             border-radius: 8px;
-            padding: 15px;
+            padding: 20px;
             border: 2px solid var(--accent-color);
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
@@ -235,15 +235,15 @@
         .card-placeholder {
             background: var(--card-bg);
             border-radius: 8px;
-            padding: 15px;
+            padding: 20px;
             border: 1px solid var(--border-color);
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            height: 220px;
+            height: 240px;
             display: flex;
             align-items: center;
             justify-content: center;
             color: var(--text-secondary);
-            font-size: 0.9rem;
+            font-size: 1rem;
         }
 
         .card:hover {
@@ -255,8 +255,8 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            gap: 10px;
-            margin-bottom: 10px;
+            gap: 15px;
+            margin-bottom: 15px;
         }
 
         .team {
@@ -265,16 +265,16 @@
         }
 
         .team img {
-            width: 40px;
-            height: 40px;
+            width: 45px;
+            height: 45px;
             border-radius: 50%;
-            margin-bottom: 5px;
+            margin-bottom: 8px;
             border: 1px solid var(--border-color);
         }
 
         .team span {
             display: block;
-            font-size: 0.9rem;
+            font-size: 1rem;
             color: var(--text-primary);
         }
 
@@ -285,22 +285,22 @@
 
         .match-time {
             text-align: center;
-            font-size: 0.85rem;
+            font-size: 0.9rem;
             color: var(--text-secondary);
-            margin-bottom: 10px;
+            margin-bottom: 15px;
         }
 
         .metrics-container {
-            margin-bottom: 10px;
+            margin-bottom: 15px;
         }
 
         .metric-item {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            font-size: 0.85rem;
+            font-size: 0.9rem;
             color: var(--text-secondary);
-            margin: 4px 0;
+            margin: 6px 0;
         }
 
         .metric-item .metric-name {
@@ -326,19 +326,19 @@
 
         .metric-raw {
             color: var(--text-secondary);
-            font-size: 0.75rem;
+            font-size: 0.8rem;
             margin-left: 5px;
         }
 
         .h2h-button {
             width: 100%;
-            padding: 10px;
+            padding: 12px;
             background: var(--primary-color);
             color: var(--text-primary);
             border: none;
             border-radius: 8px;
             font-weight: 500;
-            font-size: 0.9rem;
+            font-size: 1rem;
             cursor: pointer;
             transition: all 0.3s ease;
         }
@@ -354,6 +354,7 @@
 
             .content {
                 margin-left: 180px;
+                padding: 25px;
             }
 
             .sidebar-button {
@@ -362,8 +363,8 @@
             }
 
             .games-grid {
-                grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-                gap: 12px;
+                grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+                gap: 15px;
             }
 
             .header {
@@ -371,20 +372,81 @@
             }
 
             .league-header {
-                font-size: 1.3rem;
-                height: 44px;
+                font-size: 1.4rem;
+                height: 46px;
                 line-height: 28px;
             }
 
             .league-section {
-                margin-bottom: 40px;
+                margin-bottom: 50px;
+            }
+
+            .filter-container {
+                gap: 15px;
+                margin-bottom: 25px;
+            }
+
+            #leagueFilter, #searchFilter {
+                max-width: 300px;
+                padding: 12px;
+                font-size: 0.9rem;
+            }
+
+            .best-player-card {
+                padding: 15px;
+                margin-bottom: 15px;
+            }
+
+            .best-player-card h3 {
+                font-size: 1rem;
+            }
+
+            .best-player-card p {
+                font-size: 0.9rem;
+            }
+
+            .card {
+                padding: 15px;
+            }
+
+            .teams {
+                gap: 10px;
+                margin-bottom: 10px;
+            }
+
+            .team img {
+                width: 40px;
+                height: 40px;
+            }
+
+            .team span {
+                font-size: 0.9rem;
+            }
+
+            .match-time {
+                font-size: 0.85rem;
+                margin-bottom: 10px;
+            }
+
+            .metrics-container {
+                margin-bottom: 10px;
+            }
+
+            .metric-item {
+                font-size: 0.85rem;
+                margin: 4px 0;
+            }
+
+            .h2h-button {
+                padding: 10px;
+                font-size: 0.9rem;
             }
         }
 
         @media (max-width: 768px) {
             .games-grid {
                 grid-template-columns: 1fr;
-                gap: 10px;
+                gap: 12px;
             }
 
             .team img {
@@ -399,11 +461,14 @@
             #leagueFilter, #searchFilter {
                 max-width: 100%;
                 font-size: 0.8rem;
+                padding: 10px;
             }
 
             .filter-container {
                 flex-direction: column;
                 align-items: stretch;
+                gap: 10px;
+                margin-bottom: 20px;
             }
 
             .logo-img {
@@ -426,7 +491,7 @@
 
             .content {
                 margin-left: 50px;
-                padding: 15px;
+                padding: 20px;
             }
 
             .sidebar-button {
@@ -444,21 +509,22 @@
             }
 
             .league-header {
-                font-size: 1.2rem;
-                height: 40px;
-                line-height: 24px;
+                font-size: 1.3rem;
+                height: 42px;
+                line-height: 26px;
             }
 
             .league-section {
-                margin-bottom: 30px;
+                margin-bottom: 40px;
             }
 
             .card {
-                padding: 10px;
+                padding: 12px;
             }
 
             .best-player-card {
-                padding: 10px;
+                padding: 12px;
+                margin-bottom: 12px;
             }
 
             .best-player-card h3 {
@@ -471,10 +537,16 @@
 
             .match-time {
                 font-size: 0.75rem;
+                margin-bottom: 8px;
+            }
+
+            .metrics-container {
+                margin-bottom: 8px;
             }
 
             .metric-item {
                 font-size: 0.75rem;
+                margin: 3px 0;
             }
 
             .h2h-button {
@@ -500,25 +572,25 @@
             }
 
             .league-header {
-                font-size: 1.1rem;
-                height: 36px;
-                line-height: 20px;
+                font-size: 1.2rem;
+                height: 38px;
+                line-height: 22px;
             }
 
             .league-section {
-                margin-bottom: 20px;
+                margin-bottom: 30px;
             }
 
             .games-grid {
-                gap: 8px;
+                gap: 10px;
             }
 
             .content {
-                padding: 10px;
+                padding: 15px;
             }
 
             .card {
-                padding: 8px;
+                padding: 10px;
             }
 
             .team img {
