--- a/visualization.html
+++ b/visualization.html
@@ -139,22 +139,27 @@
 
         .content {
             flex: 1;
-            padding: 30px;
+            padding: 40px 20px;
             margin-left: 220px;
             overflow-y: auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .filter-container {
             display: flex;
-            gap: 20px;
-            margin-bottom: 30px;
+            gap: 25px;
+            margin-bottom: 40px;
             justify-content: center;
+            width: 100%;
+            max-width: 1200px;
         }
 
         #leagueFilter, #searchFilter {
             flex: 1;
-            max-width: 350px;
-            padding: 14px;
+            max-width: 400px;
+            padding: 16px;
             background: var(--card-bg);
             border: 1px solid var(--border-color);
             border-radius: 8px;
@@ -168,19 +173,25 @@
             border-color: var(--primary-color);
         }
 
+        #gamesContainer {
+            width: 100%;
+            max-width: 1200px;
+        }
+
         .league-section {
-            margin-bottom: 60px;
+            margin-bottom: 70px;
+            width: 100%;
         }
 
         .league-header {
-            font-size: 1.5rem;
+            font-size: 1.6rem;
             font-weight: 600;
-            margin-bottom: 20px;
-            padding: 10px;
+            margin-bottom: 25px;
+            padding: 12px;
             color: var(--text-primary);
             background: rgba(255, 255, 255, 0.05);
             border-radius: 8px;
-            height: 50px;
+            height: 54px;
             line-height: 30px;
             white-space: nowrap;
             overflow: hidden;
@@ -190,16 +201,16 @@
         .best-player-card {
             background: var(--card-bg);
             border-radius: 8px;
-            padding: 20px;
-            margin-bottom: 20px;
+            padding: 25px;
+            margin-bottom: 25px;
             border: 2px solid var(--accent-color);
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         .best-player-card h3 {
-            font-size: 1.1rem;
+            font-size: 1.2rem;
             font-weight: 600;
-            margin-bottom: 8px;
+            margin-bottom: 10px;
             color: var(--accent-color);
             display: flex;
             align-items: center;
@@ -207,21 +218,21 @@
         }
 
         .best-player-card p {
-            font-size: 0.95rem;
+            font-size: 1rem;
             color: var(--text-secondary);
-            margin: 4px 0;
+            margin: 5px 0;
         }
 
         .games-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-            gap: 20px;
+            grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+            gap: 25px;
         }
 
         .card {
             background: var(--card-bg);
             border-radius: 8px;
-            padding: 20px;
+            padding: 25px;
             border: 2px solid var(--accent-color);
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
@@ -235,10 +246,10 @@
         .card-placeholder {
             background: var(--card-bg);
             border-radius: 8px;
-            padding: 20px;
+            padding: 25px;
             border: 1px solid var(--border-color);
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            height: 240px;
+            height: 260px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -255,8 +266,8 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            gap: 15px;
-            margin-bottom: 15px;
+            gap: 20px;
+            margin-bottom: 20px;
         }
 
         .team {
@@ -265,16 +276,16 @@
         }
 
         .team img {
-            width: 45px;
-            height: 45px;
+            width: 50px;
+            height: 50px;
             border-radius: 50%;
-            margin-bottom: 8px;
+            margin-bottom: 10px;
             border: 1px solid var(--border-color);
         }
 
         .team span {
             display: block;
-            font-size: 1rem;
+            font-size: 1.1rem;
             color: var(--text-primary);
         }
 
@@ -285,22 +296,22 @@
 
         .match-time {
             text-align: center;
-            font-size: 0.9rem;
+            font-size: 0.95rem;
             color: var(--text-secondary);
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
 
         .metrics-container {
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
 
         .metric-item {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            font-size: 0.9rem;
+            font-size: 0.95rem;
             color: var(--text-secondary);
-            margin: 6px 0;
+            margin: 8px 0;
         }
 
         .metric-item .metric-name {
@@ -326,19 +337,19 @@
 
         .metric-raw {
             color: var(--text-secondary);
-            font-size: 0.8rem;
+            font-size: 0.85rem;
             margin-left: 5px;
         }
 
         .h2h-button {
             width: 100%;
-            padding: 12px;
+            padding: 14px;
             background: var(--primary-color);
             color: var(--text-primary);
             border: none;
             border-radius: 8px;
             font-weight: 500;
-            font-size: 1rem;
+            font-size: 1.1rem;
             cursor: pointer;
             transition: all 0.3s ease;
         }
@@ -354,7 +365,7 @@
 
             .content {
                 margin-left: 180px;
-                padding: 25px;
+                padding: 30px 15px;
             }
 
             .sidebar-button {
@@ -363,8 +374,8 @@
             }
 
             .games-grid {
-                grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-                gap: 15px;
+                grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+                gap: 20px;
             }
 
             .header {
@@ -372,46 +383,85 @@
             }
 
             .league-header {
-                font-size: 1.4rem;
-                height: 46px;
+                font-size: 1.5rem;
+                height: 50px;
                 line-height: 28px;
             }
 
             .league-section {
-                margin-bottom: 50px;
+                margin-bottom: 60px;
             }
 
             .filter-container {
-                gap: 15px;
-                margin-bottom: 25px;
+                gap: 20px;
+                margin-bottom: 30px;
             }
 
             #leagueFilter, #searchFilter {
-                max-width: 300px;
-                padding: 12px;
+                max-width: 350px;
+                padding: 14px;
                 font-size: 0.9rem;
             }
 
             .best-player-card {
-                padding: 15px;
-                margin-bottom: 15px;
+                padding: 20px;
+                margin-bottom: 20px;
             }
 
             .best-player-card h3 {
-                font-size: 1rem;
+                font-size: 1.1rem;
             }
 
             .best-player-card p {
-                font-size: 0.9rem;
+                font-size: 0.95rem;
             }
 
             .card {
-                padding: 15px;
+                padding: 20px;
             }
 
             .teams {
-                gap: 10px;
-                margin-bottom: 10px;
+                gap: 15px;
+                margin-bottom: 15px;
+            }
+
+            .team img {
+                width: 45px;
+                height: 45px;
+            }
+
+            .team span {
+                font-size: 1rem;
+            }
+
+            .match-time {
+                font-size: 0.9rem;
+                margin-bottom: 15px;
+            }
+
+            .metrics-container {
+                margin-bottom: 15px;
+            }
+
+            .metric-item {
+                font-size: 0.9rem;
+                margin: 6px 0;
+            }
+
+            .h2h-button {
+                padding: 12px;
+                font-size: 1rem;
+            }
+
+            #gamesContainer {
+                max-width: 900px;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .games-grid {
+                grid-template-columns: 1fr;
+                gap: 15px;
             }
 
             .team img {
@@ -423,52 +473,17 @@
                 font-size: 0.9rem;
             }
 
-            .match-time {
-                font-size: 0.85rem;
-                margin-bottom: 10px;
-            }
-
-            .metrics-container {
-                margin-bottom: 10px;
-            }
-
-            .metric-item {
-                font-size: 0.85rem;
-                margin: 4px 0;
-            }
-
-            .h2h-button {
-                padding: 10px;
-                font-size: 0.9rem;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .games-grid {
-                grid-template-columns: 1fr;
-                gap: 12px;
-            }
-
-            .team img {
-                width: 35px;
-                height: 35px;
-            }
-
-            .team span {
-                font-size: 0.85rem;
-            }
-
             #leagueFilter, #searchFilter {
                 max-width: 100%;
                 font-size: 0.8rem;
-                padding: 10px;
+                padding: 12px;
             }
 
             .filter-container {
                 flex-direction: column;
                 align-items: stretch;
-                gap: 10px;
-                margin-bottom: 20px;
+                gap: 15px;
+                margin-bottom: 25px;
             }
 
             .logo-img {
@@ -491,7 +506,7 @@
 
             .content {
                 margin-left: 50px;
-                padding: 20px;
+                padding: 25px 10px;
             }
 
             .sidebar-button {
@@ -509,49 +524,53 @@
             }
 
             .league-header {
-                font-size: 1.3rem;
-                height: 42px;
+                font-size: 1.4rem;
+                height: 46px;
                 line-height: 26px;
             }
 
             .league-section {
-                margin-bottom: 40px;
+                margin-bottom: 50px;
             }
 
             .card {
-                padding: 12px;
+                padding: 15px;
             }
 
             .best-player-card {
-                padding: 12px;
-                margin-bottom: 12px;
+                padding: 15px;
+                margin-bottom: 15px;
             }
 
             .best-player-card h3 {
-                font-size: 0.9rem;
+                font-size: 1rem;
             }
 
             .best-player-card p {
-                font-size: 0.8rem;
+                font-size: 0.9rem;
             }
 
             .match-time {
-                font-size: 0.75rem;
-                margin-bottom: 8px;
+                font-size: 0.85rem;
+                margin-bottom: 10px;
             }
 
             .metrics-container {
-                margin-bottom: 8px;
+                margin-bottom: 10px;
             }
 
             .metric-item {
-                font-size: 0.75rem;
-                margin: 3px 0;
+                font-size: 0.85rem;
+                margin: 4px 0;
             }
 
             .h2h-button {
-                font-size: 0.8rem;
-                padding: 8px;
+                font-size: 0.9rem;
+                padding: 10px;
+            }
+
+            #gamesContainer {
+                max-width: 100%;
             }
         }
 
@@ -572,47 +591,47 @@
             }
 
             .league-header {
-                font-size: 1.2rem;
-                height: 38px;
-                line-height: 22px;
+                font-size: 1.3rem;
+                height: 42px;
+                line-height: 24px;
             }
 
             .league-section {
-                margin-bottom: 30px;
+                margin-bottom: 40px;
             }
 
             .games-grid {
-                gap: 10px;
+                gap: 12px;
             }
 
             .content {
-                padding: 15px;
+                padding: 20px 8px;
             }
 
             .card {
-                padding: 10px;
+                padding: 12px;
             }
 
             .team img {
-                width: 30px;
-                height: 30px;
+                width: 35px;
+                height: 35px;
             }
 
             .team span {
-                font-size: 0.75rem;
+                font-size: 0.85rem;
             }
 
             .match-time {
-                font-size: 0.7rem;
+                font-size: 0.8rem;
             }
 
             .metric-item {
-                font-size: 0.7rem;
+                font-size: 0.8rem;
             }
 
             .h2h-button {
-                font-size: 0.75rem;
-                padding: 6px;
+                font-size: 0.85rem;
+                padding: 8px;
             }
         }
     </style>
