--- a/dashboard.html
+++ b/dashboard.html
@@ -402,7 +402,7 @@
 
 <body>
     <div class="logo-container">
-        <img src="favicon.png" alt="RW TIPS Logo" class="logo">
+        <img src="https://i.ibb.co/G4Y8sHMk/Chat-GPT-Image-21-de-abr-de-2025-16-14-34-1.png" alt="RW TIPS Logo" class="logo">
         <div class="logo-text">RW TIPS</div>
     </div>
     <div class="dashboard-container">
