--- a/visualization.html
+++ b/visualization.html
@@ -243,6 +243,7 @@
             border-left: 4px solid var(--h2h-gg-8m-color);
         }
 
+        /* Melhorar o estilo do card do melhor jogador */
         .best-player-card {
             background: var(--card-bg);
             border-radius: 8px;
@@ -252,11 +253,9 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             text-align: left;
             transition: all 0.3s ease;
-        }
-
-        .best-player-card:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 10px;
         }
 
         .best-player-card .last-games-header {
@@ -269,6 +268,7 @@
             background-clip: text;
             color: transparent;
             text-shadow: 0 0 10px rgba(0, 255, 136, 0.7);
+            grid-column: 1 / -1;
         }
 
         .best-player-card h3 {
@@ -279,6 +279,7 @@
             display: flex;
             align-items: center;
             gap: 5px;
+            grid-column: 1 / -1;
         }
 
         .best-player-card p {
@@ -286,6 +287,13 @@
             color: var(--text-secondary);
             margin: 5px 0;
             line-height: 1.3;
+            display: flex;
+            align-items: center;
+            gap: 5px;
+        }
+
+        .best-player-card p:before {
+            font-size: 1rem;
         }
 
         .games-grid {
@@ -294,6 +302,7 @@
             gap: 15px;
         }
 
+        /* Substitua o estilo atual do card por este estilo melhorado */
         .card {
             background: var(--card-bg);
             border-radius: 8px;
@@ -301,11 +310,10 @@
             border: 1px solid var(--border-color);
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
-        }
-
-        .card:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            min-height: 320px; /* Altura mínima para padronizar os cards */
         }
 
         /* Bordas coloridas específicas para cada liga */
@@ -325,7 +333,7 @@
             border-left: 4px solid var(--h2h-gg-8m-color);
         }
 
-        /* Substitua o estilo atual do highlight-card por este estilo melhorado */
+        /* Melhorar o estilo do card destacado para ser mais consistente com o novo layout */
         .highlight-card {
             border: 3px solid var(--highlight-border) !important;
             box-shadow: 0 0 15px rgba(255, 215, 0, 0.5);
@@ -424,15 +432,27 @@
             background-color: #2a2a35;
         }
 
+        /* Substitua o estilo atual do team span por este estilo melhorado */
         .team span {
             display: block;
             font-size: 1.1rem;
             color: var(--text-primary);
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            max-width: 100%;
         }
 
         .team span:first-of-type {
-            font-weight: 500;
+            font-weight: 600;
             color: var(--accent-color);
+            margin-bottom: 2px;
+        }
+
+        .team span.team-name {
+            font-size: 0.8rem;
+            color: var(--text-secondary);
+            opacity: 0.8;
         }
 
         .match-time {
@@ -442,15 +462,18 @@
             margin-bottom: 20px;
         }
 
+        /* Substitua o estilo atual do metrics-container por este estilo melhorado */
         .metrics-container {
             margin-bottom: 20px;
+            flex-grow: 1; /* Faz com que esta seção ocupe o espaço disponível */
         }
 
+        /* Substitua o estilo atual do metric-item por este estilo melhorado */
         .metric-item {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            font-size: 0.95rem;
+            font-size: 0.9rem;
             color: var(--text-secondary);
             margin: 8px 0;
         }
@@ -461,42 +484,41 @@
             gap: 5px;
         }
 
-        .metric-item .metric-name::before {
-            content: '⬤';
-            color: var(--accent-color);
-            font-size: 0.6rem;
-        }
-
-        .metric-item.special .metric-name::before {
-            content: '👑';
-            font-size: 0.8rem;
+        .metric-item .metric-icon {
+            font-size: 0.9rem;
+            display: inline-block;
+            width: 16px;
+            text-align: center;
         }
 
         .metric-value {
             color: var(--text-primary);
+            font-weight: 500;
         }
 
         .metric-raw {
             color: var(--text-secondary);
-            font-size: 0.85rem;
+            font-size: 0.75rem;
             margin-left: 5px;
         }
 
+        /* Substitua o estilo atual do h2h-button por este estilo melhorado */
         .h2h-button {
             width: 100%;
-            padding: 14px;
+            padding: 12px;
             background: var(--primary-color);
             color: var(--text-primary);
             border: none;
             border-radius: 8px;
             font-weight: 500;
-            font-size: 1.1rem;
+            font-size: 1rem;
             cursor: pointer;
             transition: all 0.3s ease;
             display: flex;
             align-items: center;
             justify-content: center;
             gap: 8px;
+            margin-top: auto; /* Empurra o botão para o final do card */
         }
 
         .h2h-button:hover {
@@ -826,6 +848,15 @@
                 padding: 8px;
             }
         }
+
+        .team-name {
+            font-size: 0.8rem;
+            color: var(--text-secondary);
+        }
+
+        .metric-icon {
+            margin-right: 5px;
+        }
     </style>
 </head>
 <body>
@@ -915,8 +946,10 @@
                 "Esoccer Adriatic League - 10 mins play": "adriatic-10m"
             };
 
+            // Corrigir a função extractPlayerName para capturar corretamente o nome do jogador
             function extractPlayerName(text) {
                 if (!text || typeof text !== 'string') return 'Desconhecido';
+                // Corrigir a expressão regular para capturar o nome entre parênteses
                 const match = text.match(/$$([^)]+)$$/);
                 return match ? match[1] : text;
             }
@@ -1336,15 +1369,16 @@
                     leagueSection.appendChild(leagueHeader);
 
                     const bestPlayer = getBestPlayerForLeague(leagueName, allGames);
+                    // Atualizar a estrutura do card do melhor jogador para usar ícones e layout mais compacto
                     const bestPlayerCard = document.createElement('div');
                     bestPlayerCard.className = 'best-player-card';
                     bestPlayerCard.innerHTML = `
                         <div class="last-games-header">Últimos 5 Jogos</div>
                         <h3><span>🏆</span> Melhor Jogador da Liga</h3>
-                        <p>Player 🎮: ${bestPlayer.name}</p>
-                        <p>Win 🏆: ${bestPlayer.wins}/5</p>
-                        <p>Gols ✅: ${bestPlayer.goalsScored}</p>
-                        <p>Gols ❌: ${bestPlayer.goalsConceded}</p>
+                        <p><span>🎮</span> ${bestPlayer.name}</p>
+                        <p><span>🏆</span> ${bestPlayer.wins}/5 vitórias</p>
+                        <p><span>⚽</span> ${bestPlayer.goalsScored} gols marcados</p>
+                        <p><span>🥅</span> ${bestPlayer.goalsConceded} gols sofridos</p>
                     `;
                     leagueSection.appendChild(bestPlayerCard);
 
@@ -1366,6 +1400,7 @@
                             card.classList.add('highlight-card');
                         }
 
+                        // Modificar a estrutura HTML dos cards para usar ícones e padronizar o tamanho
                         const teams = document.createElement('div');
                         teams.className = 'teams';
 
@@ -1374,14 +1409,14 @@
                         homeTeam.innerHTML = `
                             <img src="${game.homeImage || 'https://via.placeholder.com/40?text=🏠'}" alt="${game.home_team_name || 'Time Desconhecido'}">
                             <span>${homePlayer}</span>
-                            <span>(${game.home_team_name || 'N/A'})</span>`;
+                            <span class="team-name">${game.home_team_name || 'N/A'}</span>`;
 
                         const awayTeam = document.createElement('div');
                         awayTeam.className = 'team';
                         awayTeam.innerHTML = `
                             <img src="${game.awayImage || 'https://via.placeholder.com/40?text=🛡️'}" alt="${game.away_team_name || 'Time Desconhecido'}">
                             <span>${awayPlayer}</span>
-                            <span>(${game.away_team_name || 'N/A'})</span>`;
+                            <span class="team-name">${game.away_team_name || 'N/A'}</span>`;
 
                         teams.appendChild(homeTeam);
                         teams.appendChild(awayTeam);
@@ -1392,13 +1427,27 @@
 
                         const metricsContainer = document.createElement('div');
                         metricsContainer.className = 'metrics-container';
+                        // Modificar a estrutura das métricas para usar ícones
                         const metrics = getMetrics(leagueName, homePlayer, awayPlayer, allGames);
-                        metricsContainer.innerHTML = metrics.map(metric => `
-                            <div class="metric-item ${metric.isSpecial ? 'special' : ''}">
-                                <span class="metric-name">${metric.name}</span>
-                                <span class="metric-value">${metric.value}${metric.name.includes('Form') || metric.name.includes('Avg Goals') ? '' : '%'} <span class="metric-raw">${metric.raw}</span></span>
-                            </div>
-                        `).join('');
+                        metricsContainer.innerHTML = metrics.map(metric => {
+                            // Determinar qual ícone usar com base no nome da métrica
+                            let icon = '⬤';
+                            if (metric.name.includes('Over 1.5')) icon = '📈';
+                            else if (metric.name.includes('Over 2.5')) icon = '📊';
+                            else if (metric.name.includes('Over 3.5')) icon = '📉';
+                            else if (metric.name.includes('Avg Goals')) icon = '⚽';
+                            else if (metric.name.includes('Form')) icon = '📋';
+                            
+                            // Usar ícone especial para métricas destacadas
+                            if (metric.isSpecial) icon = '👑';
+                            
+                            return `
+                                <div class="metric-item ${metric.isSpecial ? 'special' : ''}">
+                                    <span class="metric-name"><span class="metric-icon">${icon}</span>${metric.name.replace(/^.*?\s/, '')}</span>
+                                    <span class="metric-value">${metric.value}${metric.name.includes('Form') || metric.name.includes('Avg Goals') ? '' : '%'} <span class="metric-raw">${metric.raw}</span></span>
+                                </div>
+                            `;
+                        }).join('');
 
                         const h2hButton = document.createElement('button');
                         h2hButton.className = 'h2h-button';
